# crypto-realtime-etl

./: .gitignore  README.md  main.py  pyproject.toml
docker/: docker-compose.yml
docker/scripts/: create-topics.sh
ingestion/: producer.py  websocket_client.py
postgres/: create_metrics.sql  create_raw_trades.sql
spark/: spark_streaming.py
